--- a/style.css
+++ b/style.css
@@ -2,4 +2,26 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align:center;
+}
+
+nav a {
+  padding:10px;
+  background-color: aquamarine;
+  image-align:center;
+
+}
+
+
+
+div {
+   float:left;
+   text-align:center;
+}
+
+div {
+  background-color: blueviolet;
+  text-align:center;
+  width:25%
+
 }
